--- a/src/components/result-list-item/components/result-list-item.module.scss
+++ b/src/components/result-list-item/components/result-list-item.module.scss
@@ -111,11 +111,11 @@
       gap: var(--gap-base);
     }
 
-    &_properties {
+    &_apart {
       @extend %list-reset;
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      column-gap: var(--gap-sm);
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: var(--gap-xl);
       row-gap: 8px;
       width: 100%;
       padding: 16px 0;
@@ -123,72 +123,44 @@
       border-bottom: 1px solid var(--lighter);
 
       @include container-down('root', 1260px) {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
       }
 
       @include container-down('root', $tablet-lg-width) {
-        grid-template-columns: repeat(2, 1fr);
-      }
-      @include container-down('root', $mobile-width) {
         grid-template-columns: 1fr;
       }
 
       &_details {
-        @extend %flex-column;
-        gap: var(--gap-base);
+        @extend %flex-align;
         font-weight: var(--fw-r);
         font-size: var(--fs-sm);
-        color: var(--primary);
-        padding: 8px 16px;
-        background: #ffffff;
-        border: 1px solid #e5edff;
-      }
+        color: var(--gray);
+        width: 100%;
 
-      &_details span:first-child {
-        border-bottom: 1px solid var(--lighter);
-        padding-bottom: 8px;
+        @include container-down('root', $tablet-lg-width) {
+          width: 100%;
+        }
+
+        &:last-child {
+          align-items: flex-start;
+        }
       }
 
       &_details span:last-child {
-        // margin-left: auto;
+        margin-left: auto;
         font-weight: var(--fw-m);
-        color: var(--gray);
-      }
-    }
-
-    &_properties_alt {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      gap: var(--gap-base);
-
-      @include container-down('root', 1300px) {
-        grid-template-columns: repeat(3, 1fr);
-      }
-      @include container-down('root', $tablet-lg-width) {
-        grid-template-columns: repeat(2, 1fr);
+        color: var(--dark);
       }
 
-      &_details {
+      &_details div {
         @extend %flex-column;
-        padding: 8px 16px;
-        height: 100%;
-        max-height: 84px;
-        background: var(--white);
-        border: 1px solid var(--lighter);
+        gap: var(--gap-base);
+        margin-left: auto;
 
-        &_title {
-          font-weight: var(--fw-r);
-          font-size: var(--fs-sm);
-          color: var(--primary);
-          padding-bottom: 8px;
-          border-bottom: 1px solid var(--lighter);
-        }
-
-        &_desc {
-          font-weight: var(--fw-r);
-          font-size: var(--fs-sm);
-          color: var(--gray);
-          padding-top: 8px;
+        & span {
+          margin-left: auto;
+          font-weight: var(--fw-m);
+          color: var(--dark);
         }
       }
     }
@@ -207,11 +179,3 @@
     }
   }
 }
-
-// .swiper-slide.slider-result-list_slide img {
-//   width: 100%;
-//   height: 100%;
-//   max-height: 420px;
-//   max-height: 410px;
-//   object-fit: cover;
-// }
