--- a/src/shared/components/filter-map/filter-map.module.scss
+++ b/src/shared/components/filter-map/filter-map.module.scss
@@ -14,6 +14,8 @@
   z-index: 101;
   background-color: var(--white);
   padding: var(--gap-sm);
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
@@ -54,6 +56,7 @@
   &_active {
     background-color: var(--primary);
     color: var(--white);
+    margin-bottom: var(--gap-sm);
 
     svg {
       fill: var(--white);
